--- a/src/test.html
+++ b/src/test.html
@@ -8,21 +8,23 @@
     </head>
 
     <body>
-        <div class="flex h-dvh flex-col gap-6 *:border-2">
-            <div class="bg-gradient-blue h-1/6 w-full">
-                <div class="h-[80%] bg-slate-700">
-                    <p>80%</p>
+        <div class="flex h-dvh flex-col gap-y-1">
+            <div class="flex h-[30%] w-full flex-col items-center justify-center bg-red-600">
+                <div class="flex h-[60%] items-center bg-slate-700">
+                    <p class="">LOGO</p>
                 </div>
-                <div class="h-[20%] bg-slate-200">
-                    <p>20%</p>
+                <div class="h-[20%] bg-blue-400">
+                    <p class="text-xl">SALUS APP</p>
                 </div>
-                <p>A</p>
+                <div class="h-[20%] bg-amber-400">
+                    <p class="text-sm">Servicio salud</p>
+                </div>
             </div>
-            <div class="h-4/6 w-full bg-green-300">
-                <p>B</p>
+            <div class="h-[60%] w-full bg-green-300">
+                <p>Tarjetas</p>
             </div>
-            <div class="h-1/6 w-full bg-red-300">
-                <p>C</p>
+            <div class="h-[10%] w-full bg-red-300">
+                <p>Footer</p>
             </div>
         </div>
     </body>
