--- a/src/index.html
+++ b/src/index.html
@@ -8,35 +8,43 @@
     </head>
 
     <body>
-        <div class="bg-fondo flex h-dvh select-none flex-col items-center px-2 *:overflow-hidden">
+        <div class="flex h-dvh select-none flex-col items-center px-2 *:overflow-hidden sm:gap-y-2 sm:px-4">
             <!-- Título -->
-            <section class="flex h-[20%] flex-col items-center justify-stretch pt-2 hover:scale-110 hover:transition-transform active:scale-95">
-                <img src="logo-app.svg" alt="" class="h-[65%]" />
-                <h1 class="max-h-[20%] text-center font-marca text-2xl font-semibold tracking-widest">LOUKÁS</h1>
-                <h2 class="max-h-[15%] text-center font-marca text-sm font-medium">SERVICIO A LA SALUD</h2>
+            <!-- <section class="flex h-[20%] w-full flex-col items-center justify-center pt-2 hover:scale-105 hover:transition-transform active:scale-95"> -->
+            <section class="flex h-[20%] w-full flex-col items-center justify-center pt-2 hover:scale-105 hover:transition-transform active:scale-95 sm:flex-row sm:pt-0">
+                <!-- <img src="logo-app.svg" alt="" class="mt-1 h-[65%]" /> -->
+                <img src="logo-app.svg" alt="logo" class="mt-1 h-[65%] sm:mr-3 sm:mt-0 sm:h-[100%]" />
+                <h1 class="h-[23%] text-center align-text-bottom font-marca text-2xl font-semibold tracking-widest sm:h-max">
+                    SALUS APP
+                    <p class="h-[12%] text-center align-text-top font-marca text-sm font-medium sm:h-max">SERVICIO A LA SALUD</p>
+                </h1>
             </section>
             <!-- Tarjetas -->
-            <section class="flex h-[80%] w-full flex-col justify-evenly gap-y-3 *:py-3">
-                <article class="card">
+            <section class="sm-gap-y-0 flex h-[45%] w-full flex-col justify-center gap-y-3 *:py-3 sm:flex-row sm:items-center sm:gap-x-4 sm:gap-y-0 sm:*:py-1">
+                <article class="card sm:w-1/2 sm:gap-0 sm:p-1">
                     <p>Soy un paciente, y necesito un turno con un profesional de la salud:</p>
-                    <button class="btn w-3/4">solicitar turno</button>
+                    <button class="btn w-3/4 sm:w-3/5 sm:p-1">solicitar turno</button>
                 </article>
-                <article class="card">
+                <article class="card sm:w-1/2 sm:gap-0 sm:p-0">
                     <p>Soy profesional de la salud y quiero conocer el servicio o unirme a él:</p>
-                    <button class="btn w-3/4">conocer el servicio</button>
-                </article>
-                <article class="card">
-                    <p>Si eres profesional o paciente:</p>
-                    <button class="btn w-3/4">registrarse</button>
-                </article>
-                <article class="card">
-                    <p>Si ya estás registrado:</p>
-                    <button class="btn w-3/4">iniciar sesión</button>
+                    <button class="btn w-3/4 sm:w-3/5 sm:p-1">conocer el servicio</button>
                 </article>
             </section>
+            <div class="h-0.5 w-2/4 items-center justify-center self-center bg-gradient-to-r from-sky-200 via-sky-600 to-sky-200"></div>
+            <section class="sm-gap-y-0 flex h-[30%] w-full flex-col justify-center gap-y-3 *:py-3 sm:flex-row sm:items-center sm:gap-x-4 sm:gap-y-0 sm:*:py-1">
+                <article class="card sm:w-1/2 sm:gap-0 sm:px-0">
+                    <p>Si eres profesional o paciente:</p>
+                    <button class="btn w-3/4 sm:w-3/5 sm:p-1">registrarse</button>
+                </article>
+                <article class="card sm:w-1/2 sm:gap-0 sm:py-0">
+                    <p>Si ya estás registrado:</p>
+                    <button class="btn w-3/4 sm:w-3/5 sm:p-1">iniciar sesión</button>
+                </article>
+            </section>
+            <!-- Footer -->
             <footer class="h-max w-full">
                 <p
-                    class="bg-gradient-to-r from-transparent via-sky-950 to-transparent text-center font-marca font-normal tracking-widest text-orange-400 hover:scale-110 hover:transition-transform active:scale-95"
+                    class="bg-gradient-to-r from-transparent via-sky-950 to-transparent text-center font-marca font-normal tracking-widest text-orange-400 hover:scale-105 hover:transition-transform active:scale-95"
                 >
                     Φ IOSEPH Φ
                 </p>
