--- a/src/test.html
+++ b/src/test.html
@@ -8,16 +8,19 @@
     </head>
 
     <body>
+        <!-- <section class="flex h-[20%] w-full flex-col items-center justify-center pt-2 hover:scale-105 hover:transition-transform active:scale-95 sm:flex-row sm:pt-0">
+            <img src="logo-app.svg" alt="logo" class="mt-1 h-[65%] sm:mr-3 sm:mt-0 sm:h-[100%]" />
+            <h1 class="h-[23%] text-center align-text-bottom font-marca text-2xl font-semibold tracking-widest sm:h-max">
+                SALUS APP
+                <p class="h-[12%] text-center align-text-top font-marca text-sm font-medium sm:h-max">SERVICIO A LA SALUD</p>
+            </h1>
+        </section> -->
         <div class="flex h-dvh flex-col gap-y-1">
-            <div class="flex h-[30%] w-full flex-col items-center justify-center bg-red-600">
-                <div class="flex h-[60%] items-center bg-slate-700">
-                    <p class="">LOGO</p>
-                </div>
-                <div class="h-[20%] bg-blue-400">
-                    <p class="text-xl">SALUS APP</p>
-                </div>
-                <div class="h-[20%] bg-amber-400">
-                    <p class="text-sm">Servicio salud</p>
+            <div class="flex h-[30%] w-full flex-col items-center bg-red-600">
+                <div class="flex flex-col h-full items-center  bg-slate-700 w-1/6">
+                    <p class="h-3/5 w-2/4 bg-slate-500">* LOGO *</p>
+                    <p class="flex text-sm h-1/5 w-3/4 bg-red-300 justify-center items-end">SALUS APP</p>
+                    <p class="flex bg-amber-400 w-3/4 h-1/5 text-sm justify-center items-start">Servicio salud</p>
                 </div>
             </div>
             <div class="h-[60%] w-full bg-green-300">
