--- a/src/index.html
+++ b/src/index.html
@@ -4,49 +4,33 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Salus App</title>
-        <link rel="stylesheet" href="../dist/style.css" />
+        <link rel="stylesheet" href="style.css" />
     </head>
 
     <body>
-        <div class="flex h-dvh select-none flex-col items-center px-4 *:overflow-hidden sm:gap-y-2 sm:px-4">
-            <!-- Título -->
-            <!-- <section class="flex h-[20%] w-full flex-col items-center justify-center pt-2 hover:scale-105 hover:transition-transform active:scale-95"> -->
-            <section class="flex h-[20%] w-full flex-col items-center justify-center hover:scale-95 hover:transition-transform active:scale-90 sm:flex-row sm:pt-0">
-                <div class="flex flex-col h-full items-center mt-2 w-full">
-                    <img src="logo-app.svg" alt="logo" class="h-4/6 w-full " />
-                    <!-- <p class="h-4/6 bg-red-400 w-full"></p> -->
-                    <p class="h-1/6 w-2/4 mt-2 flex justify-center items-end text-2xl font-serif font-medium tracking-wide">SALUS APP</p>
-                    <p class="h-1/6 w-2/4 -mt-2 flex justify-center items-start font-serif text-sm font-medium">SERVICIO A LA SALUD</p>
-                </div>
-            </section>
-            <!-- Tarjetas -->
-            <section class="flex h-[40%] w-full flex-col justify-center gap-y-3 sm:flex-row sm:items-center sm:gap-x-4 sm:gap-y-0 sm:*:py-1">
-                <article class="card h-[40%] py-1 sm:w-1/2 sm:gap-0 sm:p-0">
+        <div class="h-dvh px-8 flex flex-col">
+            <img src="logo-app.svg" alt="logo" class="h-[20%] transition-transform hover:scale-95" />
+            <main class="h-[75%] w-full flex flex-col justify-evenly">
+                <section class="card">
                     <p>Necesito un turno con un profesional de la salud:</p>
-                    <button class="btn w-3/4 sm:w-3/5 sm:p-1">Solicitar turno</button>
-                </article>
-                <article class="card h-[40%] py-1 sm:w-1/2 sm:gap-0 sm:p-0">
+                    <button class="btn w-3/4">Solicitar turno</button>
+                </section>
+                <section class="card">
                     <p>Soy profesional de la salud y quiero conocer el servicio:</p>
-                    <button class="btn w-3/4 sm:w-3/5 sm:p-1">Conocer el servicio</button>
-                </article>
-            </section>
-            <!-- Login o Register -->
-            <div class="h-0.5 w-2/4 bg-gradient-to-r from-sky-200 via-sky-600 to-sky-200"></div>
-            <section class="flex h-[35%] w-full flex-col justify-center gap-y-3 *:py-3 sm:flex-row sm:items-center sm:gap-x-4 sm:gap-y-0 sm:*:py-1">
-                <article class="card h-[40%] sm:w-1/2 sm:gap-0 sm:px-0">
+                    <button class="btn w-3/4">Conocer el servicio</button>
+                </section>
+                <div class="h-0.5 w-3/4 bg-gradient-to-r from-transparent via-orange-400 to-transparent self-center"></div>
+                <section class="card">
                     <p>Si eres profesional o paciente:</p>
-                    <button class="btn w-3/4 sm:w-3/5 sm:p-1">Registrarse</button>
-                </article>
-                <article class="card h-[40%] sm:w-1/2 sm:gap-0 sm:py-0">
+                    <button class="btn w-3/4">Registrarse</button>
+                </section>
+                <section class="card">
                     <p>Si ya estás registrado:</p>
-                    <button class="btn w-3/4 sm:w-3/5 sm:p-1">Iniciar sesión</button>
-                </article>
-            </section>
-            <!-- Footer -->
-            <footer class="h-max w-full">
-                <p
-                    class="bg-gradient-to-r from-transparent via-sky-950 to-transparent text-center font-serif font-normal tracking-widest text-orange-400 hover:scale-105 hover:transition-transform active:scale-95"
-                >
+                    <button class="btn w-3/4">Iniciar sesión</button>
+                </section>
+            </main>
+            <footer class="h-[5%] w-full flex justify-center items-center bg-gradient-to-r from-transparent via-sky-900 to-transparent" >
+                <p class="font-serif font-normal tracking-widest text-orange-400 hover:scale-105 hover:transition-transform active:scale-95">
                     Φ IOSEPH Φ
                 </p>
             </footer>
