--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
                     <button class="btn">Solicitar turno</button>
                 </section>
                 <section class="card">
-                    <p class="flex flex-col justify-start">Soy profesional de la salud</p>
+                    <p>Soy profesional de la salud</p>
                     <button class="btn">Conocer el servicio</button>
                 </section>
                 <hr class="h-0.5 w-3/4 bg-gradient-to-r sm:bg-gradient-to-b from-transparent via-orange-400 to-transparent self-center sm:w-0.5 sm:h-3/4"/>
