--- a/src/index.html
+++ b/src/index.html
@@ -8,27 +8,27 @@
     </head>
 
     <body>
-        <div class="flex h-dvh flex-col px-6 sm:px-3">
-            <nav class="flex h-[20%] items-center justify-center sm:h-[35%]">
+        <div class="skeleton background flex h-dvh flex-col px-6 sm:px-3">
+            <nav class="flex h-[15%] items-center justify-center sm:h-[35%]">
                 <img src="logo-app.svg" alt="logo" class="mt-2 h-full transition-transform hover:scale-105 active:scale-95" />
             </nav>
-            <main class="flex h-[75%] w-full flex-col items-center justify-evenly sm:h-[60%] sm:flex-row sm:gap-x-4 sm:py-5">
-                <section class="card">
-                    <p>Soy paciente</p>
-                    <button class="btn">Solicitar turno</button>
+            <main class="flex h-[80%] w-full flex-col items-center justify-evenly sm:h-[60%] sm:flex-row sm:gap-x-4 sm:py-5">
+                <section class="card io">
+                    <p>¿Paciente?</p>
+                    <button class="btn skeleton">Solicitar turno</button>
                 </section>
-                <section class="card">
-                    <p>Soy profesional de la salud</p>
-                    <button class="btn">Conocer el servicio</button>
+                <section class="card io">
+                    <p>¿Profesional de la salud?</p>
+                    <button class="btn btn-primary">Conocer la App</button>
                 </section>
                 <hr class="h-0.5 w-3/4 self-center bg-gradient-to-r from-transparent via-orange-400 to-transparent sm:h-3/4 sm:w-0.5 sm:bg-gradient-to-b" />
-                <section class="card">
-                    <p>Si eres profesional o paciente</p>
-                    <button class="btn">Registrarse</button>
+                <section class="card io">
+                    <p>¿Quieres la App?</p>
+                    <button class="btn btn-primary">Registrarse</button>
                 </section>
-                <section class="card">
-                    <p>Si ya estás registrado</p>
-                    <button class="btn">Iniciar sesión</button>
+                <section class="card io">
+                    <p>¿Ya estás registrado?</p>
+                    <button class="btn skeleton">Iniciar sesión</button>
                 </section>
             </main>
             <footer class="flex h-[5%] w-full items-center justify-center bg-gradient-to-r from-transparent via-sky-900 to-transparent sm:h-[7%]">
