--- a/src/index.html
+++ b/src/index.html
@@ -15,48 +15,46 @@
 </head>
 
 <body>
-    <div class="skeleton background flex h-dvh flex-col px-6 select-none">
-        <nav class="flex h-[15%] items-center justify-center">
+    <div class="h-dvh flex flex-col px-6 skeleton background select-none">
+        <nav class="flex h-[20%] items-center justify-center">
             <img src="logo-app.svg" alt="logo"
-                class="pt-2 h-full transition-transform hover:scale-105 active:scale-95" />
+                class="pt-2 h-full cursor-pointer transition-transform hover:scale-105 active:scale-95" />
         </nav>
-        <main class="flex h-[80%] w-full flex-col items-center justify-evenly">
-            <div class="flex flex-col w-full items-center gap-y-2 md:gap-y-10">
-                <section class="card io">
+        <main class="flex flex-col h-[76%] w-full items-center justify-evenly">
+            <div class="flex flex-col h-full w-full items-center justify-evenly">
+                <section class="mi-card">
                     <p>¿Paciente?</p>
-                    <button class="btn skeleton" x-data @click="alert('Característica aún no disponible')">
+                    <button class="mi-btn skeleton" x-data @click="alert('Característica aún no disponible')">
                         Solicitar turno
                     </button>
                 </section>
-                <section class="card io">
+                <section class="mi-card">
                     <p>¿Profesional de la salud?</p>
-                    <button class="btn btn-primary py-4" x-data @click="alert('Característica aún no disponible')">
+                    <button class="mi-btn" x-data @click="alert('Característica aún no disponible')">
                         Conocer la App
                     </button>
                 </section>
             </div>
-            <!-- <hr class="h-0.5 w-3/4 self-center bg-gradient-to-r from-transparent via-orange-400 to-transparent md:h-3/4 md:w-0.5 md:bg-gradient-to-b" /> -->
-            <hr class="h-0.5 w-3/4 self-center bg-gradient-to-r from-transparent via-orange-400 to-transparent md:w-2/4" />
-            <div class="flex flex-col w-full items-center gap-y-2 md:gap-y-10">
-                <section class="card io">
+            <hr class="h-1 w-3/4 self-center bg-gradient-to-r from-transparent via-orange-400 to-transparent" />
+            <div class="flex flex-col h-full w-full items-center justify-evenly">
+                <section class="mi-card">
                     <p>¿Quieres la App?</p>
-                    <button class="btn btn-primary" x-data @click="alert('Característica aún no disponible')">
+                    <button class="mi-btn" x-data @click="alert('Característica aún no disponible')">
                         Registrarse
                     </button>
                 </section>
-                <section class="card io">
+                <section class="mi-card">
                     <p>¿Ya estás registrado?</p>
-                    <button class="btn skeleton">
+                    <button class="mi-btn">
                         Iniciar sesión
                     </button>
                 </section>
             </div>
         </main>
-        <footer
-            class="flex h-[5%] w-full items-center justify-center bg-gradient-to-r from-transparent via-sky-900 to-transparent">
-            <p class="font-serif tracking-widest text-orange-400 
-                hover:scale-105 hover:transition-transform active:scale-95
-                md:text-2xl">
+        <footer class="h-[4%] flex items-center justify-center bg-gradient-to-r from-transparent via-slate-600 to-transparent">
+            <p class="font-serif text-sm tracking-widest text-orange-400 
+                cursor-pointer hover:scale-105 hover:transition-transform active:scale-95
+                md:text-xl xl:text-sm">
                 Φ IOSEPH Φ
             </p>
         </footer>
