--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,8 @@
                 </section>
             </div>
         </main>
-        <footer class="h-[4%] flex items-center justify-center bg-gradient-to-r from-transparent via-slate-600 to-transparent">
+        <!-- <footer class="h-[4%] flex items-center justify-center bg-gradient-to-r from-transparent via-slate-600 to-transparent"> -->
+        <footer class="h-[4%] flex items-center justify-center bg-gradient-to-r from-transparent via-[#0E507D] to-transparent">
             <p class="font-serif text-sm tracking-widest text-orange-400 
                 cursor-pointer hover:scale-105 hover:transition-transform active:scale-95
                 md:text-xl xl:text-sm">
