--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div class="h-dvh flex flex-col px-6 skeleton background select-none">
+    <div class="h-dvh flex flex-col px-6 select-none">
         <nav class="flex h-[20%] items-center justify-center">
             <img src="logo-app.svg" alt="logo"
                 class="pt-2 h-full cursor-pointer transition-transform hover:scale-105 active:scale-95" />
