--- a/src/index.html
+++ b/src/index.html
@@ -11,53 +11,59 @@
     <script src="https://unpkg.com/htmx.org@1.9.10"
         integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC"
         crossorigin="anonymous"></script>
-    <title>Salus</title>
+    <title>SalusApp</title>
 </head>
 
 <body>
     <div class="h-dvh flex flex-col px-6 select-none">
-        <nav class="flex h-[20%] items-center justify-center">
+        <nav class="flex h-[20%] justify-center items-start">
             <img src="logo-app.svg" alt="logo"
-                class="pt-2 h-full cursor-pointer transition-transform hover:scale-105 active:scale-95" />
+                class="pt-2 h-full cursor-pointer transition-transform hover:scale-105 active:scale-95"/>
+
+                <label class="flex cursor-pointer gap-2">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="5"/><path d="M12 1v2M12 21v2M4.2 4.2l1.4 1.4M18.4 18.4l1.4 1.4M1 12h2M21 12h2M4.2 19.8l1.4-1.4M18.4 5.6l1.4-1.4"/></svg>
+                    <input type="checkbox" value="dark" class="toggle theme-controller"/>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path></svg>
+                  </label>
+
         </nav>
         <main class="flex flex-col h-[76%] w-full items-center justify-evenly">
             <div class="flex flex-col h-full w-full items-center justify-evenly">
                 <section class="mi-card">
-                    <p>¿Paciente?</p>
-                    <button class="mi-btn skeleton" x-data @click="alert('Característica aún no disponible')">
+                    <p class="">¿Paciente?</p>
+                    <button class="btn btn-secondary" x-data @click="alert('Característica aún no disponible')">
                         Solicitar turno
                     </button>
                 </section>
                 <section class="mi-card">
-                    <p>¿Profesional de la salud?</p>
-                    <button class="mi-btn" x-data @click="alert('Característica aún no disponible')">
+                    <p>¿Eres profesional de la salud?</p>
+                    <button class="btn btn-secondary" x-data @click="alert('Característica aún no disponible')">
                         Conocer la App
                     </button>
                 </section>
             </div>
-            <hr class="h-1 w-3/4 self-center bg-gradient-to-r from-transparent via-orange-400 to-transparent" />
+            <hr class="h-1.5 w-3/4 self-center bg-gradient-to-r from-transparent via-primary to-transparent" />
             <div class="flex flex-col h-full w-full items-center justify-evenly">
                 <section class="mi-card">
-                    <p>¿Quieres la App?</p>
-                    <button class="mi-btn" x-data @click="alert('Característica aún no disponible')">
+                    <p>¿Quieres obtener la App?</p>
+                    <button class="btn btn-secondary" x-data @click="alert('Característica aún no disponible')">
                         Registrarse
                     </button>
                 </section>
                 <section class="mi-card">
                     <p>¿Ya estás registrado?</p>
-                    <button class="mi-btn">
+                    <button class="btn btn-secondary">
                         Iniciar sesión
                     </button>
                 </section>
             </div>
         </main>
-        <!-- <footer class="h-[4%] flex items-center justify-center bg-gradient-to-r from-transparent via-slate-600 to-transparent"> -->
-        <footer class="h-[4%] flex items-center justify-center bg-gradient-to-r from-transparent via-[#0E507D] to-transparent">
-            <p class="font-serif text-sm tracking-widest text-orange-400 
+        <footer class="h-[4%] flex items-center justify-center bg-gradient-to-r from-transparent via-neutral to-transparent">
+            <div class="font-serif text-sm tracking-widest text-primary
                 cursor-pointer hover:scale-105 hover:transition-transform active:scale-95
                 md:text-xl xl:text-sm">
                 Φ IOSEPH Φ
-            </p>
+            </div>
         </footer>
     </div>
 </body>
