--- a/src/index.html
+++ b/src/index.html
@@ -15,22 +15,24 @@
 </head>
 
 <body>
-    <div class="h-dvh flex flex-col px-6 select-none">
+    
+    <div class="h-dvh flex flex-col px-6 select-none bg-cover" style="background-image: url('./fondo.webp')">
         <nav class="flex h-[20%] justify-center items-start">
             <img src="logo-app.svg" alt="logo"
                 class="pt-2 h-full cursor-pointer transition-transform active:scale-95"/>
 
-                <label class="pt-2 flex cursor-pointer gap-2">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="5"/><path d="M12 1v2M12 21v2M4.2 4.2l1.4 1.4M18.4 18.4l1.4 1.4M1 12h2M21 12h2M4.2 19.8l1.4-1.4M18.4 5.6l1.4-1.4"/></svg>
-                    <input type="checkbox" value="dark" class="toggle theme-controller"/>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path></svg>
-                </label>
+                <!-- <label class="pt-2 flex cursor-pointer gap-2"> -->
+                    <!-- <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="5"/><path d="M12 1v2M12 21v2M4.2 4.2l1.4 1.4M18.4 18.4l1.4 1.4M1 12h2M21 12h2M4.2 19.8l1.4-1.4M18.4 5.6l1.4-1.4"/></svg> -->
+                    <!-- <input type="checkbox" value="dark" class="toggle theme-controller"/> -->
+                    <!-- <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path></svg> -->
+                <!-- </label> -->
 
         </nav>
         <main class="flex flex-col h-[76%] w-full items-center justify-evenly">
             <div class="flex flex-col h-full w-full items-center justify-evenly">
-                <section class="mi-card">
-                    <p class="">¿Paciente?</p>
+                <section class="mi-card" >
+
+                    <p>¿Paciente?</p>
                     <button class="btn btn-secondary" x-data @click="alert('Característica aún no disponible')">
                         Solicitar turno
                     </button>
